Criação dos testes unitarios para o service e controller. Adição do jacoco.